@@ -1322,6 +1322,9 @@ You can narrow down the view by selecting a log type, the user name, or the affe
 'allpagesprefix'	=> 'Display pages with prefix:',
 'allpagesbadtitle'	=> 'The given page title was invalid or had an inter-language or inter-wiki prefix. It may contain one more characters which cannot be used in titles.',
 
+# Special:Listusers
+'listusersfrom' => 'Display users starting at:',
+
 # E this user
 #
 'mailnologin'	=> 'No send address',
